Fix jumping of content while loading for phones

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -54,7 +54,7 @@
     }
     .List__container{
         width: 120px;
-        height: 400px;
+        height: 514px;
         margin: 0px auto;
     }
 }
